// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button renders 1`] = `
.c0 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: mediumseagreen;
  border: 2px solid mediumseagreen;
}

<button
  className="c0"
/>
`;

exports[`Button Button renders with secondary color 1`] = `
.c0 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: palevioletred;
  border: 2px solid palevioletred;
}

<button
  className="c0"
  color="secondary"
/>
`;

exports[`Button Button renders with secondary color prop 1`] = `
.c0 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: palevioletred;
  border: 2px solid palevioletred;
}

<button
  className="c0"
  color="secondary"
/>
`;

exports[`Button With Snapshot Testing Button renders 1`] = `
.c0 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: mediumseagreen;
  border: 2px solid mediumseagreen;
}

<button
  className="c0"
/>
`;
